k8s/manifests-77cf5e/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-77cf5e
  namespace: journee
  labels:
    app: journee-77cf5e
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-77cf5e
  template:
    metadata:
      labels:
        app: journee-77cf5e
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-77cf5e
          image: gcr.io/my-docker-471807/journee:77cf5e-3d0483
          ports:
            - containerPort: 3000
