k8s/manifests-77cf5e/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-77cf5e
  namespace: journee
spec:
  selector:
    app: journee-77cf5e
  ports:
    - port: 80
      targetPort: 3000
